# foundationpose_cpp

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
detection_6d_foundationpose/: CMakeLists.txt
docs/: fp_codereview.md
simple_tests/: CMakeLists.txt
simple_tests/src/: test_foundationpose.cpp
tools/: check_deps.sh  cvt_onnx2trt.bash  download_onnx_model.sh  download_testdata.sh  onnx_to_trt.cpp  run_local_demo.sh
